vendor/thiserror-1.0.24/tests/ui/unexpected-field-fmt.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    What {
        #[error("...")]
        io: std::io::Error,
    },
}

fn main() {}
